got rid of visbility in rdrDateDisplay and rendered with jquery/dom-manipulation to avoid flicker

--- a/frontend/src/components/BookingForm/BookingForm.css
+++ b/frontend/src/components/BookingForm/BookingForm.css
@@ -198,7 +198,6 @@
     border-radius: 8px;
     margin: 0em;
     box-sizing: border-box;
-    visibility: visible;
     z-index: 1;
 }
 
